<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0px"
    android:paddingLeft="0px"
    android:paddingRight="0px"
    android:paddingTop="0px"
    tools:context="com.thomasgarver.rockets.MainActivity">

    <com.thomasgarver.rockets.PlanetView
        android:id="@+id/planet_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.thomasgarver.rockets.PlanetView>


    <LinearLayout
        android:id="@+id/button_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/decrease_warp"
            style="@style/NegativeIncrementalButton" />

        <Button
            android:id="@+id/increase_warp"
            style="@style/PositiveIncrementalButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ui_round_controls_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingTop="70dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/toggle_throttle"
            style="@style/UIControlRoundButton"
            android:background="@drawable/ic_throttle" />

        <Button
            android:id="@+id/toggle_warp"
            style="@style/UIControlRoundButton"
            android:background="@drawable/ic_warp" />

        <Button
            android:id="@+id/toggle_angle"
            style="@style/UIControlRoundButton"
            android:background="@drawable/ic_angle" />

        <Button
            android:id="@+id/toggle_active_rocket"
            style="@style/UIControlRoundButton"
            android:background="@drawable/ic_rocket" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/throttle_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:max="100"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="#999999"
        android:orientation="horizontal"

        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/downrange_distance_label"
                style="@style/HUDText"
                android:text="@string/distance"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/downrange_distance"
                    style="@style/HUDText"
                    android:text="@string/number_zero" />

                <TextView
                    android:id="@+id/downrange_distance_unit"
                    style="@style/HUDText"
                    android:text="@string/letter_m" />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/fuel_percentage_label"
            style="@style/HUDText"
            android:text="@string/fuel"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fuel_percentage"
                style="@style/HUDText"
                android:text="@string/number_zero" />

            <TextView
                android:id="@+id/fuel_percentage_symbol"
                style="@style/HUDText"
                android:text="@string/symbol_percent" />

        </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.thomasgarver.rockets.CircularSeekBar
        android:id="@+id/angle_bar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/throttle_bar"
        android:layout_alignStart="@+id/throttle_bar"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/hud_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#999999"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/timer_label"
                style="@style/HUDText"
                android:text="@string/elapsed_time"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/timer"
                style="@style/HUDText"
                android:text="@string/zero_zero_colon_zero_zero_colon_zero_zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"

            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/altitude_label"
                style="@style/HUDText"
                android:text="@string/altitude"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/altitude"
                    style="@style/HUDText"
                    android:text="@string/number_zero" />

                <TextView
                    android:id="@+id/altitude_unit"
                    style="@style/HUDText"
                    android:text="@string/letter_m" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/velocity_label"
                style="@style/HUDText"
                android:text="@string/velocity"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/velocity"
                    style="@style/HUDText"
                    android:text="@string/zero_dot_zero" />

                <TextView
                    android:id="@+id/velocity_unit"
                    style="@style/HUDText"
                    android:text="@string/meters_per_second" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
